hphp/test/zend/bad/halt03.php
<?php

if (true) {
	__HALT_COMPILER();
}